chore(folesium): 同步引擎至上游全量代码审查修复
对应 Folesium 主仓库提交「全量代码审查修复：崩溃安全、句柄泄漏、
Anvil 超大区块与内存/扫描优化」。

核心:
- FolesiumConfig: compactRatio 的 NaN 会绕过校验并让压实永不触发
- Compressors: deflate level 钳制 0..9；inflate 区分流损坏三态
- FolesiumDatabase: close() 的 keyspace 清空纳入锁；新增
  compactIfNeededThrottled() 并由 group-commit 线程与 flushAll() 驱动
- Keyspace: 构造失败时关闭已开分片；forEachShard 越界报错；新增 forEachKey
- ShardFile: compact() 崩溃安全；索引 hint 条目数自洽校验；新增 forEachKey
- StoreResharder: 无 COMMIT 标记时先把备份中缺失的分片搬回原位再清理
- FolesiumRegistry: reload 失败用 toString() 防 NPE；watcher 空值防护
- ZstdNative: 反射 invoke 改为 MethodHandle.invokeExact

Anvil:
- 支持超大区块的外部 c.<x>.<z>.mcc 文件（读 0x80 标记 / 写 >255 扇区）

转换器:
- folesiumToAnvil 分组与玩家导出改为 key-first 流式
- discoverDimensions 跳过数据叶子目录并忽略不可读条目

集成:
- FolesiumRegionStorage.close() 改为 AtomicBoolean CAS 幂等
- FolesiumPlayerStorage.close() 摘除 JVM 关闭钩子
- FolesiumPlayerFiles 缓存 PlayerPathRecognizer

folesium-integration/: 同步 fork-kit 的运行时热更新配置章节与压实说明